# autocombo

./: LICENSE  README.md  autocombo.cabal  stack.yaml
src/Autocombo/: Core.hs  Test.hs  Types.hs
