name:                autocombo
version:             0.0.0.1
synopsis:            An implementation of Autocombo Algorithm
description:         An implementation of Autocombo Algorithm
homepage:            https://github.com/lambdamatters/autocombo#readme
license:             MIT
license-file:        LICENSE
author:              LambdaMatters
maintainer:          vijay.hassan@gmail.com, raghu.ugare@gmail.com
copyright:           2017 LambdaMatters 
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Autocombo.Types
                     , Autocombo.Core
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lambdamatters/autocombo
